# pod5_demux

./: README.md  pyproject.toml
src/pod5_demux/: __main__.py  cli.py  mapping.py  pod5_core.py  utils.py
